KERN-566 org.sakaiproject.nakamura.basiclti.BasicLTIConsumerServlet.readProperties(Node) invokes inefficient Boolean constructor; use Boolean.valueOf(...) instead	BasicLTIConsumerServlet.java	/org.sakaiproject.nakamura.basiclti/src/main/java/org/sakaiproject/nakamura/basiclti	line 508	FindBugs Problem (Normal Priority)